--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
+    "esm": "^3.2.25",
     "nodemon": "^2.0.20"
   }
 }
